Mon Jun  9 18:08:27 2003  Tim Janik  <timj@gtk.org>

	* bsepart.[hcp]*: allocate part ids in LIFO scheme to provide correct
	ids for undo state rollbacks. added bse_part_query_note() and implemented
	undo for modifying procedures.

Mon Jun  9 03:50:49 2003  Tim Janik  <timj@gtk.org>

	* BseWave undo fixup, we now support full undo on waves by keeping
	referenced data handles in memory.

	* bseitem.c:
	(bse_item_backup_to_undo): backup to BSE_STORAGE_DBLOCK_CONTAINED storage,
	so it may later be turned readable.
	(bse_item_push_undo_storage): turn the undo storage readable instead of
	just handing on text, this keeps data handles intact.
	(undo_restore_item): restore item from BseStorage instead of just text.

	* bsestorage.[hc]: added DBLOCK storage mode which keeps data handle
	references in memory.
	added bse_storage_turn_readable() to read out a previously written to
	storage (requires DBLOCK mdoe).
	reorganized data handle parsing code somewhat, got rid of half-baked
	bse_storage_mem_flush().

Sun Jun  8 19:56:27 2003  Tim Janik  <timj@gtk.org>

	* bseitem.c:
	* bseproject.c:
	* bsestorage.[hc]: error cosmetics.

Sun Jun  8 17:27:15 2003  Tim Janik  <timj@gtk.org>

	* bsestorage.[hc]: reimplementation on top of SfiRStore and SfiWStore.
	added compat code for <=0.5.1 binary data handling, removed lots of cruft.

	* bsebindata.[hc]: removed entirely.

	* bseenums.[hc]: removed BseEndianType.

	* gsldatahandle.[hc]: added osc_freq and mix_freq as fixed members to
	data handles. changed constructors and callers accordingly.
	cosmetic fixups to wave format strings.

	* *.[hc]: made mix_freq, osc_freq ordering in argument lists consistent.

	* gslloader.[hc]:
	* gslloader-mad.c:
	* gslloader-wav.c:
	* gslloader-gslwave.c:
	* gslloader-oggvorbis.c:
	* gsldatahandle-vorbis.[hc]:
	* gsldatahandle-mad.[hc]: provide osc_freq and mix_freq in datahandles.

	* bse/gslcommon.c: cosmetic fixups to endianess strings.
